# RYOKUCHAT is a P2P chat application.

# Copyright (C) 2021 TrendCreate

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or 
# (at your option) any later version.

# This program is distributed in the hope that it will be useful, 
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "keymake_debug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.ed448-rust]
git = "https://github.com/WinLinux1028/ed448-rust.git"

# ed448-rustに合わせて更新
[dependencies.rand_core]
version = "0.6.2"
default-features = true
features = ["getrandom"]