# RYOKUCHAT is a P2P chat application.

# Copyright (C) 2021 TrendCreate
# Copyright (C) 2021 WinLinux1028
# Copyright (C) 2021 TRENDcreate

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or 
# (at your option) any later version.

# This program is distributed in the hope that it will be useful, 
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "libtea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-socks = "0.5"
byteorder = "1"
bincode = "1"

[dependencies.ed448-rust]
git = "https://github.com/pdh11/ed448-rust.git"

[dependencies.libtor]
git = "https://github.com/WinLinux1028/libtor.git"
features = ["vendored-openssl", "vendored-lzma", "vendored-zstd"]

# bincodeに合わせて更新
[dependencies.serde]
version = "1"
features = ["derive", "unstable", "alloc", "rc"]

# ed448-rustに合わせて更新
[dependencies.rand]
version = "0.8"
features = ["nightly", "simd_support", "small_rng", "min_const_gen"]

[dependencies.base64]
version = "0.13"
features = ["alloc"]

[dependencies.chrono]
version = "0.4"
features = ["alloc", "unstable-locales", "serde"]

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]

[dependencies.sqlx]
version = "0.5"
features = ["all", "runtime-tokio-rustls"]